--- a/drumgan_evaluation/compute_inception_score.ipynb
+++ b/drumgan_evaluation/compute_inception_score.ipynb
@@ -1,34 +1,11 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.2"
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.8.2 64-bit ('.venv': venv)"
-  },
-  "interpreter": {
-   "hash": "5653f0802a9a27c30e95b5ad244b882d9b87992a617df056db1cd410e98929e3"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2,
  "cells": [
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "import os\n",
     "import torch\n",
     "import torch.nn.functional as F\n",
     "import numpy as np\n",
@@ -41,36 +18,38 @@
     "import data.preprocessing as preprocessing\n",
     "import data.audio_transforms as audio_transforms\n",
     "import data.loaders as loaders"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "device = 'cpu'"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# configuration dictionary\n",
     "\n",
     "config = {\n",
     "    \"model_name\": \"footsteps_inception_model_best_2021-09-26.pt\",\n",
     "    \"comments\": \"inception trained on footsteps dataset\",\n",
-    "    \"state_dict_path\": \"/homes/mc309/ccwavegan-hifigan-fresh/drumgan_evaluation/evaluation/inception_models/footsteps_inception_model_best_2021-09-26.pt\",\n",
-    "    \n",
+    "    # \"state_dict_path\": \"/homes/mc309/hifi-wavegan/drumgan_evaluation/evaluation/inception_models/footsteps_inception_model_best_2021-09-26.pt\",\n",
+    "    \"state_dict_path\": \"/Users/Marco/Documents/OneDrive - Queen Mary, University of London/PHD/REPOS/hifi-wavegan/drumgan_evaluation/evaluation/inception_models/footsteps_inception_model_best_2021-09-26.pt\",\n",
+    "\n",
     "    # real samples used to train inception model\n",
     "    # \"real_samples_path\": \"/Users/Marco/Documents/OneDrive - Queen Mary, University of London/PHD/REPOS/_footsteps_data/zapsplat_misc_shoes_misc_surfaces_inception_network/\",\n",
     "    # real samples used to train gan\n",
     "    # \"real_samples_path\": \"/Users/Marco/Documents/OneDrive - Queen Mary, University of London/PHD/REPOS/_footsteps_data/zapsplat_pack_footsteps_high_heels_1s_aligned_for_inception_score/\",\n",
     "    # gan synthesised samples\n",
-    "    # \"synth_samples_path\": \"/Users/Marco/Documents/OneDrive - Queen Mary, University of London/PHD/REPOS/ccwavegan-hifigan-fresh/checkpoints/2021-09-20_13h23m/120k_generated_audio_for_inception_score/\",\n",
+    "    # \"synth_samples_path\": \"/Users/Marco/Documents/OneDrive - Queen Mary, University of London/PHD/REPOS/hifi-wavegan/checkpoints/2021-09-20_13h23m-hifi/120k_generated_audio_large_for_is_and_kid/\",\n",
+    "    # \"synth_samples_path\": \"/Users/Marco/Documents/OneDrive - Queen Mary, University of London/PHD/REPOS/hifi-wavegan/checkpoints/2021-09-20_19h46m-wave/120k_generated_audio_large_for_is_and_kid/\",\n",
     "    \n",
     "    \"output_path\": \"evaluation\",\n",
     "    \"output_folder\": \"evaluation_metrics\",\n",
@@ -79,7 +58,8 @@
     "\n",
     "    \"samples_loader_config\": {\n",
     "        \"dbname\": \"footsteps\",\n",
-    "        \"data_path\": \"/homes/mc309/ccwavegan-hifigan-fresh/checkpoints/2021-09-20_19h46m/120k_generated_audio_large_for_is/\",\n",
+    "        # \"data_path\": \"/homes/mc309/ccwavegan-hifigan-fresh/checkpoints/2021-09-20_19h46m-wave/120k_generated_audio_large_for_is/\",\n",
+    "        \"data_path\": \"/Users/Marco/Documents/OneDrive - Queen Mary, University of London/PHD/REPOS/hifi-wavegan/checkpoints/2021-09-20_19h46m-wave/120k_generated_audio_large_for_is/\",\n",
     "        \"criteria\": {},\n",
     "        \"shuffle\": True,\n",
     "        \"tr_val_split\": 1.0\n",
@@ -98,24 +78,24 @@
     "        \"audio_length\": 8192\n",
     "    }\n",
     "}"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "model_name = config['model_name']\n",
     "state_dict_path = config['state_dict_path']\n",
     "output_path = utils.mkdir_in_path(config['output_path'], config['output_folder'])"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# setup dataloader and processor for real samples\n",
     "\n",
@@ -155,13 +135,13 @@
     "                n_mel=transform_config.get('n_mel', 256),\n",
     "                rm_dc=True)\n",
     "# mel = mel.to(device)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# compute IS\n",
     "n_iter = 1\n",
@@ -185,13 +165,13 @@
     "            inception_score_samples.append(is_maker_samples.getScore())\n",
     "            \n",
     "            print('batch: ', batch_idx, 'IS: ', is_maker_samples.getScore())"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# save result\n",
     "IS_mean = np.mean(inception_score_samples)\n",
@@ -201,17 +181,42 @@
     "with open(output_file, 'w') as f:\n",
     "    f.write(str(IS_mean) + '\\n')\n",
     "    f.write(str(IS_std))\n",
-    "    f.close()"
-   ],
-   "outputs": [],
-   "metadata": {}
+    "    f.close()\n",
+    "\n",
+    "print(\"IS_mean: \", IS_mean)\n",
+    "print(\"IS_std: \", IS_std)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": []
   }
- ]
+ ],
+ "metadata": {
+  "interpreter": {
+   "hash": "b0f12b0897b6aac95a4ccbfd50bf012831105a0b659673d27dfe08e7727297b4"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.9.7 64-bit ('.venv': venv)",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
+  },
+  "orig_nbformat": 2
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
