--- a/drumgan_evaluation/compute_kernel_inception_distance.ipynb
+++ b/drumgan_evaluation/compute_kernel_inception_distance.ipynb
@@ -1,32 +1,10 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.2"
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.8.2 64-bit ('.venv': venv)"
-  },
-  "interpreter": {
-   "hash": "5653f0802a9a27c30e95b5ad244b882d9b87992a617df056db1cd410e98929e3"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2,
  "cells": [
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import torch\n",
     "import torch.nn.functional as F\n",
@@ -42,36 +20,37 @@
     "import data.preprocessing as preprocessing\n",
     "import data.audio_transforms as audio_transforms\n",
     "import data.loaders as loaders"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "device = 'cpu'"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# configuration dictionary\n",
     "config = {\n",
     "    \"model_name\": \"footsteps_inception_model_best_2021-09-26.pt\",\n",
     "    \"comments\": \"inception trained on footsteps dataset\",\n",
-    "    \"state_dict_path\": \"/homes/mc309/ccwavegan-hifigan-fresh/drumgan_evaluation/evaluation/inception_models/footsteps_inception_model_best_2021-09-26.pt\",\n",
+    "    # \"state_dict_path\": \"/homes/mc309/hifi-wavegan/drumgan_evaluation/evaluation/inception_models/footsteps_inception_model_best_2021-09-26.pt\",\n",
+    "    \"state_dict_path\": \"/Users/Marco/Documents/OneDrive - Queen Mary, University of London/PHD/REPOS/hifi-wavegan/drumgan_evaluation/evaluation/inception_models/footsteps_inception_model_best_2021-09-26.pt\",\n",
     "    \n",
     "    # real samples used to train inception model\n",
     "    # \"real_samples_path\": \"/homes/mc309/_data/zapsplat_misc_shoes_misc_surfaces_inception_network/\",\n",
     "    # real samples used to train gan\n",
     "    # \"real_samples_path\": \"/homes/mc309/_data/zapsplat_pack_footsteps_high_heels_1s_aligned_for_inception_score/\",\n",
     "    # gan synthesised samples\n",
-    "    # \"synth_samples_path\": \"/homes/mc309/ccwavegan-hifigan-fresh/checkpoints/2021-09-20_13h23m/120k_generated_audio_large_for_is/\",\n",
-    "    # \"synth_samples_path\": \"/homes/mc309/ccwavegan-hifigan-fresh/checkpoints/2021-09-20_19h46m/120k_generated_audio_large_for_is/\",\n",
+    "    # \"synth_samples_path\": \"/Users/Marco/Documents/OneDrive - Queen Mary, University of London/PHD/REPOS/hifi-wavegan/checkpoints/2021-09-20_13h23m-hifi/120k_generated_audio_large_for_is_and_kid/\",\n",
+    "    # \"synth_samples_path\": \"/Users/Marco/Documents/OneDrive - Queen Mary, University of London/PHD/REPOS/hifi-wavegan/checkpoints/2021-09-20_19h46m-wave/120k_generated_audio_large_for_is_and_kid/\",\n",
     "    \n",
     "    \"output_path\": \"evaluation\",\n",
     "    \"output_folder\": \"evaluation_metrics\",\n",
@@ -80,7 +59,7 @@
     "\n",
     "    \"real_samples_loader_config\": {\n",
     "        \"dbname\": \"footsteps\",\n",
-    "        \"data_path\": \"/homes/mc309/ccwavegan-hifigan-fresh/checkpoints/2021-09-20_13h23m/120k_generated_audio_large_for_is/\",\n",
+    "        \"data_path\": \"/Users/Marco/Documents/OneDrive - Queen Mary, University of London/PHD/REPOS/hifi-wavegan/checkpoints/2021-09-20_13h23m-hifi/120k_generated_audio_large_for_is_and_kid/\",\n",
     "        \"criteria\": {},\n",
     "        \"shuffle\": True,\n",
     "        \"tr_val_split\": 1.0\n",
@@ -88,7 +67,7 @@
     "\n",
     "    \"synth_samples_loader_config\": {\n",
     "        \"dbname\": \"footsteps\",\n",
-    "        \"data_path\": \"/homes/mc309/ccwavegan-hifigan-fresh/checkpoints/2021-09-20_19h46m/120k_generated_audio_large_for_is/\",\n",
+    "        \"data_path\": \"/Users/Marco/Documents/OneDrive - Queen Mary, University of London/PHD/REPOS/hifi-wavegan/checkpoints/2021-09-20_19h46m-wave/120k_generated_audio_large_for_is_and_kid/\",\n",
     "        \"criteria\": {},\n",
     "        \"shuffle\": True,\n",
     "        \"tr_val_split\": 1.0\n",
@@ -107,24 +86,24 @@
     "        \"audio_length\": 8192\n",
     "    }\n",
     "}"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "model_name = config['model_name']\n",
     "state_dict_path = config['state_dict_path']\n",
     "output_path = utils.mkdir_in_path(config['output_path'], config['output_folder'])"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# setup dataloader and processor for real and synthesised samples\n",
     "real_samples_loader_config = config['real_samples_loader_config']\n",
@@ -171,13 +150,13 @@
     "                n_mel=transform_config.get('n_mel', 256),\n",
     "                rm_dc=True)\n",
     "# mel = mel.to(device)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# compute embeddings for real samples\n",
     "real_logits = []\n",
@@ -196,13 +175,13 @@
     "        print('batch: ', batch_idx)\n",
     "    \n",
     "real_logits = torch.cat(real_logits, dim=0)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# compute embeddings for synthesised samples\n",
     "synth_logits = []\n",
@@ -221,24 +200,24 @@
     "        print('batch: ', batch_idx)\n",
     "    \n",
     "synth_logits = torch.cat(synth_logits, dim=0)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# compute KID squared distance\n",
     "mmd_distance = maximum_mean_discrepancy.mmd(real_logits, synth_logits)\n",
     "print('kid squared mmd: ', float(mmd_distance))"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# MMD A vs B\n",
     "n_mmds = 1000\n",
@@ -259,13 +238,13 @@
     "print()\n",
     "print('kid mean l1 mmd: ',np.average(mmds))\n",
     "print('kid std l1 mmd: ', np.std(mmds))"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# save results\n",
     "output_file = f'{output_path}/KID_{model_name}_{datetime.now().strftime(\"%d-%m-%y_%H_%M\")}.txt'\n",
@@ -274,9 +253,31 @@
     "    f.write(str(mean_MMD)+'\\n')\n",
     "    f.write(str(var_MMD))\n",
     "    f.close()"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   }
- ]
+ ],
+ "metadata": {
+  "interpreter": {
+   "hash": "b0f12b0897b6aac95a4ccbfd50bf012831105a0b659673d27dfe08e7727297b4"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.9.7 64-bit ('.venv': venv)",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
+  },
+  "orig_nbformat": 2
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
